<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PianoStudy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="version_text">版本号:</string>
    <string name="version">0.0.1</string>
    
    <string name="contact_text">联系我们:</string>
    <string name="contact">021-123456</string>

    <string name="userName">用户名:</string>
    <string name="password">密码:</string>
    
    <string name="action_logout">退出</string>
    <string name="about">关于超级耳朵</string>

    <string name="play">p\nl\na\ny</string>
    
	<string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>

    <string name="register_number">当前注册人数:</string>
    <string name="user_list">用户列表</string>
    <string name="authorize_selected">授权选中用户</string>
    <string name="authorize_all">全选</string>

    <string name="info_name">姓名:</string>
    <string name="info_school">学校:</string>
    <string name="info_gender">性别:</string>
    <string name="info_birthdate">出生年月:</string>
    <string name="info_verified_state">授权状态:</string>
    <string name="info_last_login_time">上次登录时间:</string>
    
    
    
    
    
</resources>
